# brightctl

./: Cargo.toml  README.md
src/: camera.rs  cli.rs  main.rs  monitor.rs  utils.rs
