[package]
name = "brightctl"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
serde = { version = "1", features = ["derive"] }
wmi = "0.18.0"


[dependencies.windows]
version = ">=0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Devices_Display",
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_System_IO",
]
