[package]
name = "brightctl"
description = "Automated laptops panel brightness adjustment based on room ambiance for MS Windows."
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
image = "0.25.9"
log = "0.4.29"
serde = { version = "1", features = ["derive"] }
simplelog = "0.12.2"
time = "0.3.44"
wmi = "0.18.0"


[dependencies.windows]
version = ">=0.62"
features = ["Win32_Foundation", "Win32_Media_MediaFoundation"]
